global button styling

--- a/src/app/views/switch-view/switch-view.component.html
+++ b/src/app/views/switch-view/switch-view.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button id='switchViewButton' (click)='onClick($event)'>
-    <b>Go to {{buttonDisplay}}</b>
+  <button class="button-default"id='switchViewButton' (click)='onClick($event)'>
+    Go to {{buttonDisplay}}
   </button>
 </div>
