--- a/src/app/widgets/about/about-button.component.html
+++ b/src/app/widgets/about/about-button.component.html
@@ -1,7 +1,7 @@
 <div (window:resize)="resize($event)">
 
-  <button id="aboutButton" (click)="onClick($event)" [style.right]="aboutButtonRight">
-    <b>About</b>
+  <button class="button-default button-map-bottom" (click)="onClick($event)" [style.right]="aboutButtonRight">
+    About
   </button>
 
 </div>
