--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-4">
         <h2 id='e2e-source-3fgl-name'>{{d.Source_Name}}</h2><br>
 
-        <button class='cat-detail-button' (click)="goToMap()">
+        <button class='button-default cat-detail-button' (click)="goToMap()">
           See source on map
         </button>
 
