--- a/src/app/widgets/share/share-button.component.html
+++ b/src/app/widgets/share/share-button.component.html
@@ -1,8 +1,8 @@
 <div (window:resize)="resize($event)">
 
-  <button id="shareButton" (click)="onClick()"
+  <button class="button-default button-map-bottom" (click)="onClick()"
   [style.right] = "shareButtonRight">
-    <b>Share</b>
+    Share
   </button>
 
 </div>
