--- a/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6" *ngIf="(source)">
       <h2 id='e2e-source-3fhl-name'>{{d.Source_Name}}</h2><br>
 
-      <button class='cat-detail-button' (click)="goToMap()">
+      <button class='button-default cat-detail-button' (click)="goToMap()">
         See source on map
       </button>
 
