Some cleanup (mostly remove empty CSS files, and code format from PyCharm)

--- a/src/app/widgets/cat-help/cat-help.component.html
+++ b/src/app/widgets/cat-help/cat-help.component.html
@@ -1,11 +1,12 @@
 <div class="container">
-    <p>
-      Type a source name in the search bar above.
-    </p>
-    <p>
-      Querying through 4754 sources. See information for SNRcat sources on <a href="http://www.physics.umanitoba.ca/snr/SNRcat/" target="_blank">their website</a>.
-    </p>
-    <p>
-      (In the future, we will include search by association, class and ra/dec coordinates.)
-    </p>
+  <p>
+    Type a source name in the search bar above.
+  </p>
+  <p>
+    Querying through 4754 sources. See information for SNRcat sources on
+    <a href="http://www.physics.umanitoba.ca/snr/SNRcat/" target="_blank">their website</a>.
+  </p>
+  <p>
+    (In the future, we will include search by association, class and ra/dec coordinates.)
+  </p>
 </div>
