Move cleanup from tslint / PyCharm with Arjun

--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -1,8 +1,7 @@
 <div id='source-select'>
 
   <md-input-container>
-    <input type="text"
-           mdInput placeholder="Select source"
+    <input mdInput placeholder="Select source"
            [formControl]="myControl"
            [mdAutocomplete]="auto"
     >
