--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -44,43 +44,39 @@
 
       <ul>
         <li>Spectrum type: {{d.SpectrumType}}</li>
-        <div *ngIf="isPowerLaw()">
+        <div *ngIf="source.spec_type == 'PowerLaw'">
           <ul>
             <li>Spectral index: {{source.format_error(d.Spectral_Index, d.Unc_Spectral_Index, false)}}</li>
             <li>Pivot energy: {{source.format(d.Pivot_Energy, true, 'MeV')}}</li>
-            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1
-              MeV-1')}}
+            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1 MeV-1')}}
             </li>
           </ul>
         </div>
-        <div *ngIf="isLogParabola()">
+        <div *ngIf="source.spec_type == 'LogParabola'">
           <ul>
             <li>Spectral index: {{source.format_error(d.Spectral_Index, d.Unc_Spectral_Index, false)}}</li>
             <li>Beta: {{source.format_error(d.beta, d.Unc_beta, false)}}</li>
             <li>Pivot energy: {{source.format(d.Pivot_Energy, true, 'MeV')}}</li>
-            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1
-              MeV-1')}}
+            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1 MeV-1')}}
             </li>
           </ul>
         </div>
-        <div *ngIf="isECPL()">
+        <div *ngIf="source.spec_type == 'PLExpCutoff'">
           <ul>
             <li>Spectral index: {{source.format_error(d.Spectral_Index, d.Unc_Spectral_Index, false)}}</li>
             <li>Cutoff energy: {{source.format_error(d.Cutoff, d.Unc_Cutoff, false, 'MeV')}}</li>
             <li>Pivot energy: {{source.format(d.Pivot_Energy, true, 'MeV')}}</li>
-            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1
-              MeV-1')}}
+            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1 MeV-1')}}
             </li>
           </ul>
         </div>
-        <div *ngIf="isSuperECPL()">
+        <div *ngIf="source.spec_type == 'PLSuperExpCutoff'">
           <ul>
             <li>Spectral index: {{source.format_error(d.Spectral_Index, d.Unc_Spectral_Index, false)}}</li>
             <li>Exponential index: {{source.format_error(d.Exp_Index, d.Unc_Exp_Index, false)}}</li>
             <li>Cutoff energy: {{source.format_error(d.Cutoff, d.Unc_Cutoff, false, 'MeV')}}</li>
             <li>Pivot energy: {{source.format(d.Pivot_Energy, true, 'MeV')}}</li>
-            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1
-              MeV-1')}}
+            <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1 MeV-1')}}
             </li>
           </ul>
         </div>
@@ -89,8 +85,7 @@
         <li>Significance curvature: {{source.format(d.Signif_Curve, true)}}</li>
         <li>Power law index: {{source.format(d.PowerLaw_Index, false)}}</li>
         <li>Integral flux (1 - 100 GeV): {{source.format_error(d.Flux1000, d.Unc_Flux1000, true, 'cm-2 s-1')}}</li>
-        <li>Energy flux (100 MeV - 100 GeV): {{source.format_error(d.Energy_Flux100, d.Unc_Energy_Flux100, true, 'erg
-          cm-2 s-1')}}
+        <li>Energy flux (100 MeV - 100 GeV): {{source.format_error(d.Energy_Flux100, d.Unc_Energy_Flux100, true, 'erg cm-2 s-1')}}
         </li>
       </ul>
 
@@ -111,8 +106,7 @@
       <div *ngIf="peakMeasured()">
         <ul>
           <li>Significance peak (100 MeV - 100 GeV): {{source.format(d.Signif_Peak, false)}}</li>
-          <li>Integral flux peak (100 MeV - 100 GeV): {{source.format_error(d.Flux_Peak, d.Unc_Flux_Peak, true, 'cm-2
-            s-1')}}
+          <li>Integral flux peak (100 MeV - 100 GeV): {{source.format_error(d.Flux_Peak, d.Unc_Flux_Peak, true, 'cm-2 s-1')}}
           </li>
           <li>Time peak: {{source.format(d.Time_Peak, true, 's')}} (Mission elapsed time)</li>
           <li>Peak interval: {{source.format(d.Peak_Interval, true, 's')}}</li>
@@ -128,12 +122,12 @@
 
     <div class="col-md-4">
       <h3><b>Lightcurve</b></h3>
-      <img src="{{getUrl(d.Source_Name, 'lc')}}" class="img-responsive" alt="Light curve"/>
+      <img src="{{source.getUrl('lc')}}" class="img-responsive" alt="Light curve"/>
     </div>
 
     <div class="col-md-4">
       <h3><b>Spectrum</b></h3>
-      <img src="{{getUrl(d.Source_Name, 'spec')}}" class="img-responsive" alt="Spectrum"/>
+      <img src="{{source.getUrl('spec')}}" class="img-responsive" alt="Spectrum"/>
     </div>
 
   </div>
