More pair-coding to clean up the code a bit

--- a/src/app/widgets/about/about-dialog.component.html
+++ b/src/app/widgets/about/about-dialog.component.html
@@ -25,5 +25,8 @@
     If you would like to contribute, check out
     <a href="https://github.com/gammapy/gamma-sky" target="_blank">our repo</a> or email us.
   </p>
+  <p>
+    Website version: {{app_info.version}}
+  </p>
 
 </div>
