--- a/src/app/widgets/about/about-dialog.component.html
+++ b/src/app/widgets/about/about-dialog.component.html
@@ -25,8 +25,9 @@
     If you would like to contribute, check out
     <a href="https://github.com/gammapy/gamma-sky" target="_blank">our repo</a> or email us.
   </p>
-  <p>
-    Website version: {{app_info.version}}
+  <p style="text-align:right" *ngIf="(version)">
+    Website version: {{version}}
   </p>
+
 
 </div>
