add last modified information in about dialog

--- a/src/app/widgets/about/about-dialog.component.html
+++ b/src/app/widgets/about/about-dialog.component.html
@@ -25,9 +25,15 @@
     If you would like to contribute, check out
     <a href="https://github.com/gammapy/gamma-sky" target="_blank">our repo</a> or email us.
   </p>
-  <p style="text-align:right" *ngIf="(version)">
-    Website version: {{version}}
-  </p>
+  <div id='app-info'>
+    <p *ngIf="appInfoLoaded()">
+      Website version: {{version}}
+    </p>
+    <p>
+      Last modified: {{lastModified}}
+    </p>
+  </div>
+
 
 
 </div>
